# truss

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.release  Dockerfile.s3  README.md  REFACTORING_ISSUES.md  ROADMAP.md  cliff.toml  compose.yml  deny.toml  justfile
.cargo/: audit.toml
.claude/skills/impl/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: integration-api.yml  integration-azure.yml  integration-cli.yml  integration-gcs.yml  integration-s3.yml  integration.yml  pages.yml  publish-container.yml  publish-crate.yml  release.yml  rust.yml
benches/: transform.rs
doc/: api.md  cli.md  desgin.md  implementation-log.md  openapi.yaml  pipeline.md  prometheus.md  runtime-architecture.md
docs/: api-reference.md  configuration.md  deployment.md  development.md  implementation-log.md  openapi.yaml  prometheus.md  signed-url-spec.md  wasm.md
docs/img/: sample-bee.avif
examples/nextjs/: .env.local.example  .gitignore  README.md  compose.yml  package.json
examples/nextjs/src/app/: layout.tsx  page.tsx
examples/nextjs/src/app/api/truss/: route.ts
examples/nextjs/src/components/: TrussImage.tsx
examples/nextjs/src/lib/: truss.ts
examples/vite-truss-wasm/: README.md  index.html  package-lock.json  package.json  vite.config.js
examples/vite-truss-wasm/src/: main.js  style.css
integration/api/: compose.yml  wait-for-server.sh
integration/api/runbooks/: error_handling.yml  health.yml  metrics.yml  transform_edge_cases.yml  transform_path.yml  transform_upload.yml
integration/azure/: compose.yml  setup-fixtures.sh
integration/azure/nginx/: nginx.conf
integration/azure/runbooks/: azure_cache.yml  azure_health.yml  azure_private.yml  azure_public_path.yml
integration/cli/: .shellspec  Dockerfile
integration/cli/spec/: bmp_spec.sh  convert_spec.sh  edge_cases_spec.sh  exit_code_spec.sh  help_spec.sh  inspect_spec.sh  security_spec.sh  sign_spec.sh  spec_helper.sh
integration/gcs/: compose.yml  setup-fixtures.sh
integration/gcs/nginx/: nginx.conf
integration/gcs/runbooks/: gcs_cache.yml  gcs_health.yml  gcs_private.yml  gcs_public_path.yml
integration/s3/: compose.yml  setup-fixtures.sh
integration/s3/nginx/: nginx.conf
integration/s3/runbooks/: s3_cache.yml  s3_health.yml  s3_private.yml  s3_public_path.yml
scripts/: build-wasm-demo.sh  build-wasm-package.mjs  check-package-version.mjs  check-web-frontend.mjs  coverage.sh  generate-fixtures.sh  render-homebrew-formula.mjs  run-nextjs-example-smoke.mjs  run-wasm-consumer-smoke.mjs  run-wasm-vite-example-runtime-smoke.mjs  run-wasm-vite-example-smoke.mjs
src/: core.rs  lib.rs  main.rs
src/adapters/: cli.rs  mod.rs  server.rs  wasm.rs
src/adapters/cli/: convert.rs  inspect.rs  mod.rs  serve.rs  sign.rs
src/adapters/server/: auth.rs  azure.rs  cache.rs  config.rs  gcs.rs  handler.rs  http_parse.rs  lifecycle.rs  metrics.rs  mod.rs  multipart.rs  negotiate.rs  rate_limit.rs  remote.rs  response.rs  routing.rs  s3.rs  signing.rs
src/codecs/: mod.rs  raster.rs  svg.rs
tests/: azure_integration.rs  cli_inspect_avif.rs  cli_metadata.rs  cli_pixel.rs  cli_serve.rs  cli_sign.rs  cli_url.rs  gcs_integration.rs  s3_integration.rs  server_graceful_shutdown.rs  server_head.rs  server_remote_edge_cases.rs  server_security.rs  server_transform.rs  server_transform_auth.rs  server_transform_basic.rs  server_transform_cache.rs  server_transform_multipart.rs  server_transform_watermark.rs  ts_url_signer.rs
tests/common/: mod.rs
web/: app.js  index.html  styles.css
web/swagger/: index.html  swagger.css
