[package]
name = "truss"
version = "0.1.0"
edition = "2021"

[dependencies]
hmac = "0.12.1"
hex = "0.4.3"
image = { version = "0.25.8", default-features = false, features = ["avif", "jpeg", "png", "webp"] }
kamadak-exif = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
ureq = "2.12.1"
url = "2.5.8"
rav1d-safe = { version = "0.3", default-features = false, features = ["bitdepth_8", "bitdepth_16"] }
mp4parse = "0.17"
yuvutils-rs = "0.8"
webp = "0.3"
quick-xml = "0.37"
resvg = "0.45"
